--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
     <p>GOOD MORNING !! WAKE UP!!</p>
 </div>
 <div class="set">
-    <p class="textsetalarm">Set Alarm</p>
+ <span class="textsetalarm">Set Alarm</span>
 </div>
 <div class="set2">
     <p>Wake Up Time :</p>
