--- a/index.html
+++ b/index.html
@@ -19,145 +19,150 @@
 <div class="bigbox">
    <div class="wakeup">
          <img src="./wake_up.png" class="wakeupimg">
-         <label for="">Set wake up time</label>
-         <label for="waketime"></label>
-         <select name="waketime" id="waketime">
+         <label for=""  class="wakeup">Set wake up time</label>
+         <label for="waketime1">
+         <select name="waketime1" id="waketime">
          <option value="default">Select Time</option>
-         <option value="0 AM">12 AM - 1AM</option>
-         <option value="1 AM">1 AM - 2AM</option>
-         <option value="2 AM">2 AM - 3AM</option>
-         <option value="3 AM">3 AM - 4AM</option>
-         <option value="4 AM">4AM - 5AM</option>
-         <option value="5 AM">5AM - 6AM</option>
-         <option value="6 AM">6AM - 7AM</option>
-         <option value="7 AM">7AM - 8AM</option>
-         <option value="8 AM">8AM - 9AM</option>
-         <option value="9 AM">9AM - 10AM</option>
-         <option value="10 AM">10AM - 11AM</option>
-         <option value="11 AM">11AM - 12PM</option>
-         <option value="12 PM">12PM - 1PM</option>
-         <option value="1 PM">1PM - 2PM</option>
-         <option value="2 PM">2PM - 3PM</option>
-         <option value="3 PM">3PM - 4PM</option>
-         <option value="4 PM">4PM - 5PM</option>
-         <option value="5 PM">5PM - 6PM</option>
-         <option value="6 PM">6PM - 7PM</option>
-         <option value="7 PM">7PM - 8PM</option>
-         <option value="8 PM">8PM - 9PM</option>
-         <option value="9 PM">9 PM - 10 PM</option>
-         <option value="10 PM">10 PM - 11 PM</option>
-         <option value="11 PM">11 PM - 12 AM</option>
+         <option value="0">12 AM - 1 AM</option>
+         <option value="1">1 AM - 2 AM</option>
+         <option value="2">2 AM - 3 AM</option>
+         <option value="3">3 AM - 4 AM</option>
+         <option value="4">4AM - 5 AM</option>
+         <option value="5">5 AM - 6 AM</option>
+         <option value="7">7 AM - 8 AM</option>
+         <option value="8">8 AM - 9 AM</option>
+         <option value="6">6 AM - 7 AM</option>
+         <option value="9">9 AM - 10 AM</option>
+         <option value="10">10 AM - 11 AM</option>
+         <option value="11">11 AM - 12 PM</option>
+         <option value="12">12 PM - 1 PM</option>
+         <option value="13">1 PM - 2 PM</option>
+         <option value="14">2 PM - 3 PM</option>
+         <option value="15">3 PM - 4 PM</option>
+         <option value="16">4 PM - 5 PM</option>
+         <option value="17">5 PM - 6 PM</option>
+         <option value="18">6 PM - 7 PM</option>
+         <option value="19">7 PM - 8 PM</option>
+         <option value="20">8 PM - 9 PM</option>
+         <option value="21">9 PM - 10 PM</option>
+         <option value="22">10 PM - 11 PM</option>
+         <option value="23">11 PM - 12 AM</option>
         </select>
     </div>
+</label>
     <div class="hrline1">
         <hr>
     </div>
    <div class="lunch">
          <img src="./lunch_time.png" >
          <label for="">Set Lunch time</label>
-         <label for="lunch"></label>
-         <select name="lunchtime" id="lunchtime">
+         <label for="lunch">
+         <select name="lunch" id="lunchtime">
          <option value="default">Select Time</option>
-         <option value="0 AM">12AM - 1AM</option>
-         <option value="1 AM">1AM - 2AM</option>
-         <option value="2 AM">2AM - 3AM</option>
-         <option value="3 AM">3AM - 4AM</option>
-         <option value="4 AM">4AM - 5AM</option>
-         <option value="5 AM">5AM - 6AM</option>
-         <option value="6 AM">6AM - 7AM</option>
-         <option value="7 AM">7AM - 8AM</option>
-         <option value="8 AM">8AM - 9AM</option>
-         <option value="9 AM">9AM - 10AM</option>
-         <option value="10 AM">10AM - 11AM</option>
-         <option value="11 AM">11AM - 12PM</option>
-         <option value="12 PM">12PM - 1PM</option>
-         <option value="1 PM">1PM - 2PM</option>
-         <option value="2 PM">2PM - 3PM</option>
-         <option value="3 PM">3PM - 4PM</option>
-         <option value="4 PM">4PM - 5PM</option>
-         <option value="5 PM">5PM - 6PM</option>
-         <option value="6 PM">6PM - 7PM</option>
-         <option value="7 PM">7PM - 8PM</option>
-         <option value="8 PM">8PM - 9PM</option>
-         <option value="9 PM">9PM - 10PM</option>
-         <option value="10 PM">10PM - 11PM</option>
-         <option value="11 PM">11PM - 12AM</option>
+         <option value="0">12 AM - 1 AM</option>
+         <option value="1">1 AM - 2 AM</option>
+         <option value="2">2 AM - 3 AM</option>
+         <option value="3">3 AM - 4 AM</option>
+         <option value="4">4AM - 5 AM</option>
+         <option value="5">5 AM - 6 AM</option>
+         <option value="7">7 AM - 8 AM</option>
+         <option value="8">8 AM - 9 AM</option>
+         <option value="6">6 AM - 7 AM</option>
+         <option value="9">9 AM - 10 AM</option>
+         <option value="10">10 AM - 11 AM</option>
+         <option value="11">11 AM - 12 PM</option>
+         <option value="12">12 PM - 1 PM</option>
+         <option value="13">1 PM - 2 PM</option>
+         <option value="14">2 PM - 3 PM</option>
+         <option value="15">3 PM - 4 PM</option>
+         <option value="16">4 PM - 5 PM</option>
+         <option value="17">5 PM - 6 PM</option>
+         <option value="18">6 PM - 7 PM</option>
+         <option value="19">7 PM - 8 PM</option>
+         <option value="20">8 PM - 9 PM</option>
+         <option value="21">9 PM - 10 PM</option>
+         <option value="22">10 PM - 11 PM</option>
+         <option value="23">11 PM - 12 AM</option>
         </select>
+    </label>
     </div>
+</label>
     <div class="hrline2"><hr></div>
    <div class="nap">
          <img src="./nap_time.png" >
          <label for="">Set Nap time</label>
-         <label for="naptime"></label>
+         <label for="naptime">
          <select name="naptime" id="naptime">
-         <option value="default">Select Time</option>
-         <option value="0 AM">12AM - 1AM</option>
-         <option value="1 AM">1AM - 2AM</option>
-         <option value="2 AM">2AM - 3AM</option>
-         <option value="3 AM">3AM - 4AM</option>
-         <option value="4 AM">4AM - 5AM</option>
-         <option value="5 AM">5AM - 6AM</option>
-         <option value="6 AM">6AM - 7AM</option>
-         <option value="7 AM">7AM - 8AM</option>
-         <option value="8 AM">8AM - 9AM</option>
-         <option value="9 AM">9AM - 10AM</option>
-         <option value="10 AM">10AM - 11AM</option>
-         <option value="11 AM">11AM - 12PM</option>
-         <option value="12 PM">12PM - 1PM</option>
-         <option value="1 PM">1PM - 2PM</option>
-         <option value="2 PM">2PM - 3PM</option>
-         <option value="3 PM">3PM - 4PM</option>
-         <option value="4 PM">4PM - 5PM</option>
-         <option value="5 PM">5PM - 6PM</option>
-         <option value="6 PM">6PM - 7PM</option>
-         <option value="7 PM">7PM - 8PM</option>
-         <option value="8 PM">8PM - 9PM</option>
-         <option value="9 PM">9PM - 10PM</option>
-         <option value="10 PM">10PM - 11PM</option>
-         <option value="11 PM">11PM - 12AM</option>
-        </select>
+            <option value="default">Select Time</option>
+            <option value="0">12 AM - 1 AM</option>
+         <option value="1">1 AM - 2 AM</option>
+         <option value="2">2 AM - 3 AM</option>
+         <option value="3">3 AM - 4 AM</option>
+         <option value="4">4AM - 5 AM</option>
+         <option value="5">5 AM - 6 AM</option>
+         <option value="7">7 AM - 8 AM</option>
+         <option value="8">8 AM - 9 AM</option>
+         <option value="6">6 AM - 7 AM</option>
+         <option value="9">9 AM - 10 AM</option>
+         <option value="10">10 AM - 11 AM</option>
+         <option value="11">11 AM - 12 PM</option>
+         <option value="12">12 PM - 1 PM</option>
+         <option value="13">1 PM - 2 PM</option>
+         <option value="14">2 PM - 3 PM</option>
+         <option value="15">3 PM - 4 PM</option>
+         <option value="16">4 PM - 5 PM</option>
+         <option value="17">5 PM - 6 PM</option>
+         <option value="18">6 PM - 7 PM</option>
+         <option value="19">7 PM - 8 PM</option>
+         <option value="20">8 PM - 9 PM</option>
+         <option value="21">9 PM - 10 PM</option>
+         <option value="22">10 PM - 11 PM</option>
+         <option value="23">11 PM - 12 AM</option>
+           </select>
     </div>
+</label>
     <div class="hrline3"><hr></div>
    <div class="night">
          <img src="./nap_time.png" >
          <label for="">Set Night time</label>
-         <label for="nighttime"></label>
+         <label for="nighttime">
          <select name="nighttime" id="nighttime">
-         <option value="default">Select Time</option>
-         <option value="0 AM">12AM - 1AM</option>
-         <option value="1 AM">1AM - 2AM</option>
-         <option value="2 AM">2AM - 3AM</option>
-         <option value="3 AM">3AM - 4AM</option>
-         <option value="4 AM">4AM - 5AM</option>
-         <option value="5 AM">5AM - 6AM</option>
-         <option value="6 AM">6AM - 7AM</option>
-         <option value="7 AM">7AM - 8AM</option>
-         <option value="8 AM">8AM - 9AM</option>
-         <option value="9 AM">9AM - 10AM</option>
-         <option value="10 AM">10AM - 11AM</option>
-         <option value="11 AM">11AM - 12PM</option>
-         <option value="12 PM">12PM - 1PM</option>
-         <option value="1 PM">1PM - 2PM</option>
-         <option value="2 PM">2PM - 3PM</option>
-         <option value="3 PM">3PM - 4PM</option>
-         <option value="4 PM">4PM - 5PM</option>
-         <option value="5 PM">5PM - 6PM</option>
-         <option value="6 PM">6PM - 7PM</option>
-         <option value="7 PM">7PM - 8PM</option>
-         <option value="8 PM">8PM - 9PM</option>
-         <option value="9 PM">9PM - 10PM</option>
-         <option value="10 PM">10PM - 11PM</option>
-         <option value="11 PM">11PM - 12AM</option>
-        </select>
-    </div> 
+            <option value="default">Select Time</option>
+            <option value="0">12 AM - 1 AM</option>
+         <option value="1">1 AM - 2 AM</option>
+         <option value="2">2 AM - 3 AM</option>
+         <option value="3">3 AM - 4 AM</option>
+         <option value="4">4AM - 5 AM</option>
+         <option value="5">5 AM - 6 AM</option>
+         <option value="7">7 AM - 8 AM</option>
+         <option value="8">8 AM - 9 AM</option>
+         <option value="6">6 AM - 7 AM</option>
+         <option value="9">9 AM - 10 AM</option>
+         <option value="10">10 AM - 11 AM</option>
+         <option value="11">11 AM - 12 PM</option>
+         <option value="12">12 PM - 1 PM</option>
+         <option value="13">1 PM - 2 PM</option>
+         <option value="14">2 PM - 3 PM</option>
+         <option value="15">3 PM - 4 PM</option>
+         <option value="16">4 PM - 5 PM</option>
+         <option value="17">5 PM - 6 PM</option>
+         <option value="18">6 PM - 7 PM</option>
+         <option value="19">7 PM - 8 PM</option>
+         <option value="20">8 PM - 9 PM</option>
+         <option value="21">9 PM - 10 PM</option>
+         <option value="22">10 PM - 11 PM</option>
+         <option value="23">11 PM - 12 AM</option>
+           </select>
+    </div>
+</label> 
     <div id="currentValue"></div>
 </div>
-<div class="message1" id="message">
-    <p>GOOD MORNING !! WAKE UP!!</p>
+<div class="message1">
+    <p  id="message" >Hello !!</p>
 </div>
-<div class="set" onclick="setDisplay()">
+<div class="set"onclick="Display()" class="textsetalarm" >
 
-            <span class="textsetalarm" class="set">Set Alarm</span>
+            <span class="textsetalarm">Set Alarm</span>
            
 </div>
 <div class="set2">
@@ -192,12 +197,12 @@
                 </div>
             </div>
 
-     <p id="message2"> 
-           GRAB SOME HEALTHY BREAKFAST!!!
+     <div class="message2"> 
+           <p  id="message2" >GRAB SOME HEALTHY BREAKFAST!!!</p>
 <!--          
          <img  alt="" class="img"> -->
+</div>
          <div id="img"></div>
-        </p>
 
 
 </div>  
